--- a/resource/style.css
+++ b/resource/style.css
@@ -9,12 +9,25 @@ h1{
     font-size: 3rem;
     white-space: pre-wrap;
 }
+h2{
+    font-size: 2.5rem;
+    font-weight: 800;
+}
 h3, h4, p{
     padding-left: 1rem;
 }
+h3{
+    font-size: 2rem;
+}
+h4{
+    font-size: 1.75rem;
+}
+p{
+    font-size: 1rem;
+}
 /*Image Settings*/
 .banner img,
-.info img{
+.image img{
     padding: 2rem 2.5rem 2rem 1.5rem;
     max-width: 100%; 
     height: auto; 
@@ -42,6 +55,9 @@ header{
 .logo strong{
     font-weight: bold;
 }
+nav a{
+    color: black;
+}
 /*Overall Content Styling under .content*/
 .content{
     padding-top: 2rem;
@@ -61,9 +77,9 @@ header{
 
 .image{
     display: flex;
-    width: 80%;
     flex-direction: column;
     flex: 3 0 0;
+    width: 80%;
 }
 .bann{
     display: flex;
@@ -78,6 +94,14 @@ header{
     flex-wrap: wrap;
     justify-content: center;
 }
+.bann a{
+    background-color: #696969;
+    width: 95%;
+    text-align: center;
+    color: white;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
 /*Information Styling*/
 .info{
     display: flex;
@@ -85,15 +109,16 @@ header{
 
 .block{
     display: flex;
-    Max-width: 26.4375rem;
-    max-height: 10.5rem;
+    width: 26.4375rem;
+    height: 10.5rem;
 }
 .indep{
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
+    width: 35%;
 }
 .indep img{
-    max-width: 100%;
+    width: 100%;
     display: block;
 }
 
@@ -114,16 +139,22 @@ header{
     width: 25%;
     background-color: #F8F8FF;
     margin: 2rem;
+    padding: 1rem auto 0.5rem auto;
 }
 .blocks img{
     width: 100%;
-    height: auto;
+    height: 16rem;
+}
+/*Title for 3rd and 4th container*/
+.title{
+    text-align: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 /*Exhibit Styling*/
 .exhibit{
     display: flex;
     flex-direction: column;
-    margin-top: 2rem;
     flex: 1;
     align-items: center;
 }
@@ -139,8 +170,9 @@ header{
     display: flex;
     flex-direction: column;
 }
-.lablock{
+.thes{
     display: flex;
+    flex
 }
 /*Footer Styling*/
 footer{
