--- a/resource/style.css
+++ b/resource/style.css
@@ -30,9 +30,9 @@ h4{
 p{
     font-size: 1rem;
     line-height: 1rem;
+    padding: 1rem;
 }
 /*Image Settings*/
-.banner img,
 .image img{
     padding: 2rem 2.5rem 2rem 1.5rem;
     max-width: 100%; 
@@ -45,6 +45,9 @@ p{
 div{
     border: 1px solid black;
 }
+/*div:nth-child(2){
+    border: 3px dotted red;
+}*/
 /*Header Styling.  Main sections are header and class: logo*/
 header{
     position: fixed;
@@ -97,7 +100,6 @@ nav a:nth-child(-n+3){
     display: flex;
     flex-direction: column;
     flex: 3 0 0;
-    /*width: 70%;*/
 }
 .bann{
     display: flex;
@@ -107,11 +109,22 @@ nav a:nth-child(-n+3){
     padding: 0.5rem;
     flex: 1 0 0;
     width: 26.4375rem;
-}
-.bann h3, .bann p, .bann a{
     flex-wrap: wrap;
     justify-content: center;
 }
+/*.bann.a{
+    display: flex;
+    justify-content: flex-end;
+    height: 40%;
+    align-items: center;
+}
+
+.bann.c{
+    display: flex;
+    justify-content: flex-start;
+    height: 40%;
+    font-size: 2rem;
+}*/
 .bann a{
     background-color: #696969;
     width: 95%;
@@ -127,7 +140,7 @@ nav a:nth-child(-n+3){
 .data{
     width: 26.4375rem;
 }
-.block{
+#block{
     display: flex;
     height: 10.5rem;
     flex: 1 0 0;
@@ -148,20 +161,6 @@ nav a:nth-child(-n+3){
     flex-direction: column;
     align-content: center;
 }
-/*.indep1 img{
-    width: 100%;
-    display: block;
-}*/
-/*indep1{
-    padding: 1rem;
-    display: flex;
-    width: 35%;
-}
-.indepth1{
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-}*/
 
 /*Course styling*/
 .course{
@@ -209,6 +208,10 @@ nav a:nth-child(-n+3){
 .last{
     display: flex;
     flex-direction: column;
+}
+.last video{
+    width: 90%;
+    height: auto;
 }
 .thes{
     display: flex;
