--- a/resource/style.css
+++ b/resource/style.css
@@ -1,3 +1,8 @@
+/*Div to show all boxes while modeling the page*/
+div{
+    border: 1px solid black;
+}
+
 /*General Adjustments & Fonts*/
 
 html{
@@ -33,18 +38,22 @@ p{
     padding: 1rem;
 }
 /*Image Settings*/
-.image img{
-    padding: 2rem 2.5rem 2rem 1.5rem;
-    max-width: 100%; 
-    height: auto; 
-    display: block;
+.media-container img,
+.media-container video{
+  display: block;
+  width: 100%;
+  padding: 1rem 1rem 2rem 1rem;
+  /*padding-bottom: 2rem;*/
+}
+
+.media-containter{
+    overflow: hidden;
 }
 
 
-/*Div to show all boxes while modeling the page*/
-div{
-    border: 1px solid black;
-}
+
+
+
 /*div:nth-child(2){
     border: 3px dotted red;
 }*/
@@ -77,7 +86,7 @@ nav a:last-child{
     margin-right: 1rem;
 }
 nav a:nth-child(-n+3){
-    border-right: 1rem solid rgba(144, 223, 223, 0.8)
+    border-right: 1rem solid rgba(144, 223, 223, 0.8);
 }
 /*Overall Content Styling under .content*/
 .content{
@@ -86,31 +95,30 @@ nav a:nth-child(-n+3){
     display: flex;
     flex-direction: column;
 }
-/*div.content:nth-child(odd){
-    background-color: grey;
-}*/
+/*Main Container Spacing*/
+.main-content{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    padding: 2rem 1.5rem;
+}
+
+
 /*Banner Styling*/
 .banner{
     display: flex;
     background-color: #D3D3D3;
 }
 
-
-.image{
-    display: flex;
-    flex-direction: column;
-    flex: 3 0 0;
-}
-.bann{
+.supporting-content{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 0.5rem;
     flex: 1 0 0;
-    width: 26.4375rem;
+    width: 40%;
     flex-wrap: wrap;
-    justify-content: center;
 }
 /*.bann.a{
     display: flex;
@@ -125,7 +133,7 @@ nav a:nth-child(-n+3){
     height: 40%;
     font-size: 2rem;
 }*/
-.bann a{
+.supporting-content a{
     background-color: #696969;
     width: 95%;
     text-align: center;
@@ -134,16 +142,15 @@ nav a:nth-child(-n+3){
     padding-bottom: 0.5rem;
 }
 /*Information Styling*/
-.info{
+.info-content{
     display: flex;
+    width: 40%;
 }
-.data{
-    width: 26.4375rem;
-}
+
+
 #block{
     display: flex;
     height: 10.5rem;
-    flex: 1 0 0;
 }
 
 .indep{
@@ -160,6 +167,7 @@ nav a:nth-child(-n+3){
     display: flex;
     flex-direction: column;
     align-content: center;
+    width: 65%;
 }
 
 /*Course styling*/
