--- a/resource/style.css
+++ b/resource/style.css
@@ -1,7 +1,7 @@
 /*Div to show all boxes while modeling the page*/
-/*div{
+div{
     border: 1px solid black;
-}*/
+}
 
 /*General Adjustments & Fonts*/
 
@@ -43,17 +43,15 @@ p{
 .media-container video{
     display: block;
     width: 100%;
-    padding: 1rem 1rem 2rem .5rem;
+    padding: 2rem 1rem 2rem .5rem;
 }
-
 
 .media-containter{
     overflow: hidden;
 }
 
-
-
 /*Header Styling.  Main sections are header and class: logo*/
+/*Almost complete - need to work on hyperlinks*/
 header{
     position: fixed;
     display: flex;
@@ -61,16 +59,22 @@ header{
     align-items: center;
     background-color: white;
     width: 100%;
+    height: 4rem;
 }
 .logo{
+    padding-left: 1.5rem;
     display: flex;
     align-items: center;
+    font-size: 1.25rem;
+    color: rgba(80, 86, 86, 0.8) 
 }
 .logo strong{
     font-weight: bold;
+    color: rgba(48, 49, 49, 1) 
 }
 a{
     text-decoration: none;
+    font-size: 1.25rem;
 }
 nav a{
     display: inline-flex;
@@ -86,18 +90,18 @@ nav a:nth-child(-n+3){
 }
 /*Overall Content Styling under .content*/
 .content{
-    padding-top: 2rem;
+    padding-top: 4rem;
     width: 100%;
     display: flex;
     flex-direction: column;
 }
-/*Main Container Spacing*/
+/*Main Container Spacing - Set*/
 .main-content{
     display: flex;
     flex-direction: column;
     width: 60%;
-    padding: 2rem 1.5rem;
-}
+    padding: 0rem 1.5rem 2rem 1.5rem;
+} 
 
 
 /*Banner Styling*/
@@ -115,12 +119,11 @@ nav a:nth-child(-n+3){
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    /*flex: 1 0 0;*/
     width: 40%;
     flex-wrap: wrap;
 }
-
-.btn{
+/*need to fix the Start Here button*/
+.button{
     background-color: #696969;
     width: 95%;
     text-align: center;
@@ -128,6 +131,17 @@ nav a:nth-child(-n+3){
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
+
+/*.button {
+    background-color: #4CAF50; /* Green */
+    /*border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}*/
 /*Information Styling*/
 .info-content{
     display: flex;
@@ -137,6 +151,9 @@ nav a:nth-child(-n+3){
     display: flex;
     height: 10.5rem;
     width: 100%;
+}
+.side-top{
+    padding-top: 1rem;
 }
 
 .side-image{
