Working on text & color

--- a/resource/style.css
+++ b/resource/style.css
@@ -9,20 +9,27 @@ html{
     font-size: 16px;
 }
 
+body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 h1{
     font-weight: 900;
-    font-size: 3rem;
-    white-space: pre-wrap;
+    font-size: 3.8rem;
+    padding: 2.5rem;
 }
 h2{
     font-size: 2.5rem;
     font-weight: 800;
     line-height: 1rem;
 }
-h2, h3, h4, p, .indepth a, span{
+#banner-content h4, #banner-content a{
+    padding-left: 2.5rem;
+}
+h2, h3, h4, p, .side-info a, span{
     padding-left: 1rem;
 }
-.image h2, p{
+.media-container h2, p{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
@@ -111,25 +118,31 @@ nav a:nth-child(-n+3){
 }
 #banner-content{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 .supporting-content{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     width: 40%;
     flex-wrap: wrap;
 }
+#banner-content p, #banner-content h1, #banner-content a{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
 /*need to fix the Start Here button*/
 .button{
-    background-color: #696969;
-    width: 95%;
+    background-color: #434346;
+    border: none;
+    width: 100%;
     text-align: center;
     color: white;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+    display: inline-block;
 }
 
 /*.button {
@@ -139,8 +152,8 @@ nav a:nth-child(-n+3){
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+    
+
 }*/
 /*Information Styling*/
 .info-content{
@@ -170,8 +183,9 @@ nav a:nth-child(-n+3){
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: flex-start;
     width: 65%;
+    padding-left: 1rem;
 }
 
 /*Course styling*/
