--- a/resource/style.css
+++ b/resource/style.css
@@ -38,12 +38,12 @@ h2, h3, h4, p, .side-info a, span{
     padding-bottom: 0.5rem;
 }
 h3{
-    padding: 1rem;
-    font-size: 2rem;
+    padding: 0.75rem;
+    font-size: 1.75rem;
     opacity: 0.7;
 }
 h4{
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     opacity: 0.6;
     line-height: 3rem;
 }
@@ -93,7 +93,7 @@ header{
     color: rgba(48, 49, 49, 1) 
 }
 a{
-    color: lightblue;
+    color: skyblue;
     text-decoration: none;
     font-size: 1.25rem;
 }
@@ -152,7 +152,7 @@ nav a:nth-child(-n+3){
 .button{
     background-color: #505050;
     border: none;
-    width: 100%;
+    width: 85%;
     text-align: center;
     color: white;
     padding-top: 0.5rem;
@@ -194,6 +194,7 @@ nav a:nth-child(-n+3){
     align-items: flex-start;
     width: 65%;
     padding-left: 1rem;
+    padding-bottom: 0.5rem;
     line-height: 1rem;
 }
 
