--- a/resource/style.css
+++ b/resource/style.css
@@ -19,12 +19,10 @@ h1{
     padding: 2rem;
     color: black;
     opacity: 0.6;
-    line-height: 3rem;
 }
 h2{
     font-size: 2.5rem;
     font-weight: 800;
-    line-height: 1rem;
     opacity: 0.6;
 }
 #banner-content h4, #banner-content a{
@@ -38,18 +36,20 @@ h2, h3, h4, p, .side-info a, span{
     padding-bottom: 0.5rem;
 }
 h3{
-    padding: 0.75rem;
+    padding: 0.5rem 0rem 0rem 0.75rem;
     font-size: 1.75rem;
     opacity: 0.7;
+    line-height: 2rem;
 }
 h4{
     font-size: 1.5rem;
-    opacity: 0.6;
-    line-height: 3rem;
+    opacity: 0.5;
+    margin-top: 1rem;
+    /*line-height: 2rem;*/
 }
 p, .eman{
     font-size: 1rem;
-    line-height: 2rem;
+    line-height: 1.5rem;
     padding: 1rem;
     opacity: 0.5;
 }
@@ -259,7 +259,7 @@ footer{
     size: 1rem;
     padding-left: 1rem;
 }
-@media only screen and (min-width:480px){
+@media only screen and (min-width:640px){
     .navb, .core-mobile{
         display: none;
     }
@@ -271,7 +271,7 @@ footer{
     }
 
 }
-@media only screen and (max-width:480px){
+@media only screen and (max-width:640px){
    
     .nava, .logo span, .blocks, #disap{
         display: none;
@@ -286,6 +286,12 @@ footer{
         padding-top: .5rem;
     }
     /*Banner Section - Done*/
+    .ban{
+        background-color: #505050;
+        opacity: 0.7;
+        height: 11.25rem;
+        width: 100%;
+    }
     #banner-content{
         display: flex;
         flex-direction: column;
@@ -314,22 +320,31 @@ footer{
         height: 16rem;
         border: none;
     }
-    #block .side-image{
+    #block .side-image img{
         width: 100%;
-        height: auto;
+    }
+    #block .side-image{
+        width: 94%;
         padding: 1rem;
+        height: 70%;
     }
     #block .side-info{
-        padding: 1rem 0 0 1rem; 
+        padding: 0.25rem 0 1rem 1rem; 
         width: 100%;
+        height: 30%;
     }
     #block h3{
         font-size: 1.5rem;
-        line-height: 1rem;
+        line-height: 0rem;
     }
-    #block p, #block a{
-        line-height: 1rem;
+    #block a{
+        line-height: 0rem;
         font-size: 1rem;
+    }
+    #block p{
+        padding-top: 0.5rem;
+        font-size: 1rem;
+        line-height: 1rem;
     }
     /*Course Section - Done, might need to adjust margin of blocks*/
     .core-mobile{
@@ -360,6 +375,7 @@ footer{
     .hib .main-content{
         width: 100%;
     }
+    /*Footer corrections*/
     footer{
         color: black;
         font-size: .75rem;
