--- a/resource/style.css
+++ b/resource/style.css
@@ -1,7 +1,7 @@
 /*Div to show all boxes while modeling the page*/
-/*div{
+div{
     border: 1px solid black;
-}*/
+}
 
 /*General Adjustments & Fonts*/
 
@@ -11,45 +11,43 @@ html{
 
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0;
+    font-size: 16px;
 }
 
 h1{
     font-weight: 900;
-    font-size: 3rem;
+    font-size: 3em;
     padding: 2rem;
     color: black;
     opacity: 0.6;
 }
 h2{
-    font-size: 2.5rem;
+    font-size: 2.5em;
     font-weight: 800;
     opacity: 0.6;
 }
 #banner-content h4, #banner-content a{
     padding-left: 2rem;
 }
-h2, h3, h4, p, .side-info a, span{
-    padding-left: 1rem;
-}
+
 .media-container h2, p{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
 h3{
-    padding: 0.5rem 0rem 0rem 0.75rem;
-    font-size: 1.75rem;
+    font-size: 1.75em;
     opacity: 0.7;
 }
 h4{
-    font-size: 1.5rem;
+    font-size: 1.5em;
     opacity: 0.5;
     margin-top: 1rem;
     /*line-height: 2rem;*/
 }
 p, .eman{
-    font-size: 1rem;
+    font-size: 1em;
     line-height: 1.5rem;
-    padding: 1rem;
     opacity: 0.5;
 }
 .grey, .banner, .course{
@@ -61,7 +59,8 @@ p, .eman{
 .media-container video{
     display: block;
     width: 100%;
-    padding: 2rem 0;
+    /*padding: 2rem 0;*/
+    height: auto;
 }
 
 .media-containter{
@@ -84,7 +83,7 @@ header{
     padding-left: 1.5rem;
     display: flex;
     align-items: center;
-    font-size: 1.25rem;
+    font-size: 1.25em;
     color: rgba(80, 86, 86, 0.8);
 }
 .logo strong{
@@ -94,7 +93,7 @@ header{
 a{
     color: skyblue;
     text-decoration: none;
-    font-size: 1.25rem;
+    font-size: 1.25em;
 }
 nav a{
     display: inline-flex;
@@ -102,11 +101,15 @@ nav a{
     height: 100%;
 
 }
+nav{
+    height: 4rem;
+    line-height: 4.1rem;
+}
 
 /*Overall Content Styling under .content*/
 .content{
     padding-top: 4rem;
-    width: 100%;
+    /*width: 100%;*/
     display: flex;
     flex-direction: column;
 }
@@ -122,6 +125,7 @@ nav a{
 /*Banner Styling*/
 .banner{
     display: flex;
+    padding: 2rem 0;
 }
 #banner-content{
     display: flex;
@@ -156,6 +160,7 @@ nav a{
 /*Information Styling*/
 .info-content{
     display: flex;
+    padding-top: 2rem 0;
 }
 .info-content #block{
     border-left: 1px solid #D3D3D3;
@@ -178,6 +183,7 @@ nav a{
 
 .side-image img{
     width: 100%;
+    height: auto;
     display: block;
 }
 .side-info{
@@ -197,6 +203,7 @@ nav a{
     display: flex;
     flex-direction: column;
     height: auto;
+    padding: 2rem 0;
 }
 .course .core{
     display: flex;
@@ -230,6 +237,7 @@ nav a{
     display: flex;
     justify-content: space-between;
     width: 100%;
+    padding: 2rem 0;
 }
 .wide{
     display: flex;
@@ -257,6 +265,34 @@ footer{
     size: 1rem;
     padding-left: 1rem;
 }
+@media only screen and (min-width: 1200px){
+    body{
+        font-size: 16px;
+    }
+    h3{
+        padding: 0.5rem 0rem 0rem 0.75rem;
+    }
+    h2, h3, h4, p, .side-info a, span{
+        padding-left: 1rem;
+    }
+    p, .eman{
+        padding: 1rem;
+    }
+
+}
+@media only screen and (max-width: 1199px){
+    body{
+        font-size: 12px;
+    }
+}
+@media only screen and (max-width: 800px){
+    html{
+        font-size: 12px;
+    }
+    body{
+        font-size: 10px;
+    }
+}
 @media only screen and (min-width:640px){
     .navb, .core-mobile{
         display: none;
@@ -270,7 +306,9 @@ footer{
 
 }
 @media only screen and (max-width:640px){
-   
+   body{
+       font-size: 12px;
+   }
     .nava, .logo span, .blocks, #disap{
         display: none;
     }
@@ -301,7 +339,7 @@ footer{
         width: 90%;
     }
     h1{
-        font-size: 2.25rem;
+        /*font-size: 2.25rem;*/
         opacity: 0.75;
     }
     /*Info Section*/
@@ -332,16 +370,16 @@ footer{
         height: 30%;
     }
     #block h3{
-        font-size: 1.5rem;
+        /*font-size: 1.5rem;*/
         line-height: 0rem;
     }
     #block a{
         line-height: 0rem;
-        font-size: 1rem;
+        /*font-size: 1rem;*/
     }
     #block p{
         padding-top: 0.5rem;
-        font-size: 1rem;
+        /*font-size: 1rem;*/
         line-height: 1rem;
     }
     /*Course Section - Done, might need to adjust margin of blocks*/
