--- a/resource/style.css
+++ b/resource/style.css
@@ -1,7 +1,7 @@
 /*Div to show all boxes while modeling the page*/
-div{
-    border: 1px solid black;
-}
+    /*div{
+        border: 1px solid black;
+    }*/
 
 /*General Adjustments & Fonts*/
 
@@ -59,7 +59,6 @@ p, .eman{
 .media-container video{
     display: block;
     width: 100%;
-    /*padding: 2rem 0;*/
     height: auto;
 }
 
@@ -99,8 +98,11 @@ nav a{
     display: inline-flex;
     color: black;
     height: 100%;
-
 }
+a:link{
+    color: blue;
+}
+
 nav{
     height: 4rem;
     line-height: 4.1rem;
@@ -154,13 +156,21 @@ nav{
     color: white;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;    
+}
+.button a:active{
+    color: red;
+}
+.button:hover {
+    background-color: #5ebc2f;
 }
 
 /*Information Styling*/
 .info-content{
     display: flex;
-    padding-top: 2rem 0;
+    padding: 2rem 0;
 }
 .info-content #block{
     border-left: 1px solid #D3D3D3;
@@ -170,9 +180,6 @@ nav{
     display: flex;
     height: 10.5rem;
     width: 100%;
-}
-.side-top{
-    padding-top: 1rem;
 }
 
 .side-image{
@@ -237,22 +244,11 @@ nav{
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 2rem 0;
+    /*padding: 2rem 0;*/
+    margin-top: 0;
 }
-.wide{
-    display: flex;
-}
-.last{
-    display: flex;
-    flex-direction: column;
-}
-.last video{
-    width: 90%;
-    height: auto;
-}
-.thes{
-    display: flex;
-}
+
+
 /*Footer Styling*/
 footer{
     display: flex;
@@ -265,7 +261,7 @@ footer{
     size: 1rem;
     padding-left: 1rem;
 }
-@media only screen and (min-width: 1200px){
+@media only screen and (min-width: 1260px){
     body{
         font-size: 16px;
     }
@@ -280,7 +276,7 @@ footer{
     }
 
 }
-@media only screen and (max-width: 1199px){
+@media only screen and (max-width: 1259px){
     body{
         font-size: 12px;
     }
